2015-04-18  Carl Hetherington  <cth@carlh.net>

	* Version 1.78.5 released.

2015-04-18  Carl Hetherington  <cth@carlh.net>

	* Attempt to fix confusion with the JPEG2000 bandwidth
	control when a user enters a value directly rather than
	using the spin arrows.

2015-04-17  Carl Hetherington  <cth@carlh.net>

	* Version 1.78.4 released.

2015-04-16  Carl Hetherington  <cth@carlh.net>

	* Fix potential OS X crashes due to another incarnation
	of the bizarre multi-thread stringstream bug.

2015-04-15  c.hetherington  <cth@carlh.net>

	* Sort filenames when they are imported with "add files" or
	drag-and-drop.

	* Fix incorrect import of files with drag-and-drop.

2015-04-14  Carl Hetherington  <cth@carlh.net>

	* Allow adjustment of white point using a Bradford matrix.

2015-04-13  Carl Hetherington  <cth@carlh.net>

	* Define colour conversions using red/green/blue chromaticities
	and white point rather than a matrix.

2015-04-13  c.hetherington  <cth@carlh.net>

	* Add menu option to reset default preferences.

2015-04-13  Carl Hetherington  <cth@carlh.net>

	* Version 1.78.3 released.

2015-04-13  Carl Hetherington  <cth@carlh.net>

	* Version 1.78.2 released.

2015-04-13  Carl Hetherington  <cth@carlh.net>

	* Make the matrix used to convert from YUV to RGB configurable, so
	that the correct one for Rec 601 or 709 can be used.  Add a Rec
	601 colour conversion preset and change the Rec 709 preset to use
	the right matrix to convert from YUV to RGB.

	* Remove small (and incorrect) differences between RGB -> XYZ
	matrices for Rec 709 and sRGB.

2015-04-12  Carl Hetherington  <cth@carlh.net>

	* Version 1.78.1 released.

2015-04-12  Carl Hetherington  <cth@carlh.net>

	* Possibly fix problems with multiple moving-image
	content in the same film (#531).

2015-03-26  Carl Hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

2015-03-22  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.
