@@ -1,3 +1,11 @@
+2015-04-20  Carl Hetherington  <cth@carlh.net>
+
+	* Use a single binary file for keeping frame information
+	rather than a file per frame (#444).
+
+	* Remove the encoded frames count in properties, which
+	I think is of dubious value.
+
 2015-04-18  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.78.5 released.
